--- a/emaillist01/pom.xml
+++ b/emaillist01/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.douzone</groupId>
@@ -17,6 +15,14 @@
 		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
 
+	<dependencies>
+		<dependency>
+		    <groupId>org.mariadb.jdbc</groupId>
+		    <artifactId>mariadb-java-client</artifactId>
+		    <version>2.7.5</version>
+		</dependency>
+	</dependencies>
+	
 	<build>
 		<finalName>emaillist01</finalName>
 		<plugins>
@@ -26,6 +32,5 @@
 			    <version>3.3.2</version>
 			</plugin>
 		</plugins>
-	</build>
-	
+	</build>	
 </project>
