--- a/emaillist01/pom.xml
+++ b/emaillist01/pom.xml
@@ -24,7 +24,7 @@
 			<artifactId>mariadb-java-client</artifactId>
 			<version>2.7.5</version>
 		</dependency>
-		
+
 		<!-- Servlet -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -32,7 +32,7 @@
 			<version>4.0.1</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
@@ -40,8 +40,8 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
-	
-	
+
+
 
 	<build>
 		<finalName>emaillist01</finalName>
@@ -50,6 +50,18 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.3.2</version>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
+				<version>1.1</version>
+				<configuration>
+					<url>http://192.168.10.51:8080/manager/text</url>
+					<path>/emaillist01</path>
+					<username>admin</username>
+					<password>manager</password>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
