pom.xml 수정: tomcat deploy

--- a/emaillist02/pom.xml
+++ b/emaillist02/pom.xml
@@ -33,6 +33,7 @@
 			<scope>provided</scope>
 		</dependency>
 		
+		<!-- jsp -->
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
