--- a/guestbook02/pom.xml
+++ b/guestbook02/pom.xml
@@ -31,6 +31,7 @@
 			<scope>provided</scope>
 		</dependency>
 		
+		<!--  jsp -->
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
