--- a/helloweb/pom.xml
+++ b/helloweb/pom.xml
@@ -26,6 +26,7 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- jsp -->
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
