--- a/jstlel/pom.xml
+++ b/jstlel/pom.xml
@@ -9,8 +9,8 @@
 	</parent>
 	<artifactId>jstlel</artifactId>
 	<packaging>war</packaging>
-	
-	 <properties>
+
+	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.outputEncoding>UTF-8</project.build.outputEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
@@ -18,13 +18,13 @@
 	</properties>
 
 	<dependencies>
-		<!-- MariaDB JDBC Driver -->
-		<dependency>
-			<groupId>org.mariadb.jdbc</groupId>
-			<artifactId>mariadb-java-client</artifactId>
-			<version>2.7.5</version>
-		</dependency>
-		
+ 		<!-- JSTL -->
+ 		<dependency>
+ 			<groupId>jstl</groupId>
+ 			<artifactId>jstl</artifactId>
+ 			<version>1.2</version>
+ 		</dependency>
+ 		
 		<!-- Servlet -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -32,8 +32,8 @@
 			<version>4.0.1</version>
 			<scope>provided</scope>
 		</dependency>
-		
-		<!--  jsp -->
+
+		<!-- jsp -->
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
@@ -41,14 +41,14 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<finalName>jstlel</finalName>
 		<plugins>
 			<plugin>
-			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-war-plugin</artifactId>
-			    <version>3.3.2</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.3.2</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -62,5 +62,5 @@
 				</configuration>
 			</plugin>
 		</plugins>
-	</build>	
+	</build>
 </project>
